stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
/* ... */
.darkmode table table + table {
    border-top: 1px solid #454a5a;
}
.darkmode #ns-select a:hover {
    background: transparent !important;
}

/* Main Structure */
aside {
    display: block;
    float: left;
    position: fixed;
    z-index: 2;
}

#side {
    width: 350px;
    height: calc(100vh - 50px);
    top: 50px;
    z-index: 10;
    background-color: #fcfcfc;
    border-right: 1px solid var(--gray1);
}

#nav {
    left: 0;
    top: 0;
    height: 50px;
    width: 100vw;
    padding: 10px 40px 10px 15px;
    border-bottom: 1px solid var(--gray1);
    background: #f8f8f8;
    overflow: visible;
    z-index: 10;
}

#main {
    margin-left: 350px;
    float: left;
    width: calc(100% - 350px);
    display: block;
    min-height: 100vh;
    padding: 60px 40px;
}

.cta {
    /* text-align: center; */
    display: block;
    margin: 20px auto;
}

/* Sidebar */
#logo {
    display: flex;
    float: left;
    text-align: left;
    line-height: 30px;
    margin-right: 20px;
    color: var(--gray5);
    font-size: 1.3rem;
}

#logo h1 {
    font-weight: 300;
    display: inline-block;
    font-size: 20px;
}

#nav #logo svg {
    width: auto;
    height: auto;
    display: inline-block;
    margin-right: 10px;
}

#current-namespace {
    padding: 0 20px;
    display: flex;
    border-bottom: 1px solid var(--gray1);
    font-size: 1.1rem;
    line-height: 1.1;
    height: 75px;
    align-items: center;
}

#namespaces {
    height: 50px;
    max-height: 50px;
    margin-top: -10px;
    display: inline-block;
    text-transform: uppercase;
}

#namespaces > strong {
    line-height: 30px;
    position: absolute;
}

#namespaces .list {
    display: inline-block;
    position: relative;
    height: 50px;
    min-width: 150px;
    margin-left: 10px;
    overflow: visible;
    top: 0;
}

#namespaces a {
    display: block;
    text-align: center;
    width: 100%;
    padding: 15px;
}

ul.zg-ul-select {
    border-radius: 2px;
    border: 1px solid transparent;
    box-sizing: border-box;
    cursor: pointer;
    margin: 0 auto;
    padding: 0;
    width: auto;
    height: 0;
    overflow: hidden;
    z-index: 99;
}

ul.zg-ul-select.active {
    height: auto;
    display: block;
    border: 1px solid var(--blue);
    border-top-right-radius: 0;
    border-top-left-radius: 0;
    box-shadow: 0 10px 60px rgba(0,0,0,.1);
}
ul.zg-ul-select li {
  border-radius: 3px;
  display: block;
  padding: 0;
}

ul.zg-ul-select li.active {
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    color: var(--blue);
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    position: relative;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
}

ul.zg-ul-select.active li {
    border-top: 1px solid var(--blue);
    box-shadow: none;
    display: block;
    border-radius: 0;
    background: #fff;
}
ul.zg-ul-select.active li:hover {
  background: var(--blue);
}

ul.zg-ul-select.active li:hover a {
    color: #fff;
}

ul.zg-ul-select.active li.active {
  background: var(--lblue);
  border: 0;
}

ul.zg-ul-select.active li.active + li {
    border: 0;
}

ul.zg-ul-select.active li.active a {
    color: #fff;
}

ul.zg-ul-select.active li.active:hover {
  background: var(--lblue);
}

#selected--zg-ul-select {
    position: relative;
    cursor: pointer;
    width: 100%;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    box-sizing: border-box;
    color: #111;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-touch-callout: none; /* iOS Safari */
        -webkit-user-select: none; /* Safari */
        -khtml-user-select: none; /* Konqueror HTML */
        -moz-user-select: none; /* Old versions of Firefox */
            -ms-user-select: none; /* Internet Explorer/Edge */
                user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Opera and Firefox */
}

#selected--zg-ul-select.active {
    border: 0;
    background: var(--blue);
    border-radius: 0;
    padding: 0 0 0 10px;
    height: 50px;
    margin: 0 auto;
    display: inline-block;
    text-align: center;
    line-height: 50px;
    color: #fff;
}

#selected--zg-ul-select > span {
    position: relative;
    right: -6px;
    top: -1px;
    display: inline-block;
}

#ns-select {
    padding-left: 50px;
    list-style: none;
    line-height: 50px;
    display: none;
}

#ns-select a {
    padding-left: 0;
}

#ns-select li {
    position: relative;
}

#current-namespace h2 span {
    position: relative;
    display: inline-block;
    top: -2px;
    transition: transform .3s ease-in-out;
}

#current-namespace h2 strong {
    cursor: pointer;
}

#current-namespace.open h2 span {
    transform: rotate(180deg);
    transition: transform .3s ease-in-out;
}

/* ul.zg-ul-select:not(.active) li.active:after, #selected--zg-ul-select.active:after {
    display: block;
    content: " ";
    border: 1px solid var(--blue);
    width: 5px;
    height: 5px;
    transform: rotate(45deg);
    border-top: 0;
    border-left: 0;
    position: absolute;
    right: 10px;
    top: 7px;
} */

#selected--zg-ul-select:after {
    transform: rotate(225deg);
    top: 12px;
}

#selected--zg-ul-select.open:after {
    transform: rotate(-135deg);
    top: 10px;
}

#sets {
    /* overflow-x: visible; */
    height: calc(100vh - 125px);
    overflow: auto;
}

#sets.expanded {
    overflow-x: hidden;
    overflow-y: auto;
}

.set {
    border-bottom: 1px solid rgba(211, 211, 211, .3);
    height: auto;
    font-size: 1.1rem;
    line-height: 60px;
    /* max-height: 100vh; */
    transition: max-height 1s ease-out;
    position: relative;
}
/* ... */

